Fix tau2slog2 bug that resulted in dropping events with timestamp clashes. Removed old debug statements. Significant performance improvements.
Former-commit-id: b0b75af0e14515fafb2b04e2169d25ca14317ceb